- Implementada clase Partido para la gestión de eventos - Añadida funcionalidad para la creación de eventos a través de un Dialog - Creada actividad para visualizar eventos publicados (actualmente solo muestra el id del evento) - Implementado el JavaDoc de las clases principales de la aplicación - Finalizado los tests de los métodos de la clase Database

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -6,4 +6,8 @@
     <string name="username">Nombre de usuario</string>
     <string name="password">Contraseña</string>
     <string name="welcome">¡Bienvenido a SportTogether</string>
+    <string name="tennis">Tenis</string>
+    <string name="paddle">Pádel</string>
+    <string name="football">Fútbol</string>
+    <string name="basketball">Baloncesto</string>
 </resources>
