--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,13 @@
         <item name="football">@string/football</item>
         <item name="basketball">@string/basketball</item>
     </string-array>
+    <string name="complete_profile">Please, complete your profile</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
+    <string name="age">Age</string>
+    <string name="complete_profile_button">Complete Profile</string>
+    <string name="delete">Delete</string>
+    <string name="today">Today</string>
+    <string name="tomorrow">Tomorrow</string>
+    <string name="yesterday">Yesterday</string>
 </resources>
