--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,4 +19,6 @@
     <string name="today">Hoy</string>
     <string name="tomorrow">Mañana</string>
     <string name="yesterday">Ayer</string>
+    <string name="user_pass_error">Usuario y/o contraseña incorrectos</string>
+    <string name="user_exists">El usuario ya existe</string>
 </resources>
