--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -21,4 +21,5 @@
     <string name="yesterday">Ayer</string>
     <string name="user_pass_error">Usuario y/o contraseña incorrectos</string>
     <string name="user_exists">El usuario ya existe</string>
+    <string name="create_match_data_error">Inserte todos los datos solicitados</string>
 </resources>
