--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="yesterday">Yesterday</string>
     <string name="user_pass_error">User/Password incorrect</string>
     <string name="user_exists">User already exists</string>
+    <string name="create_match_data_error">Insert all the required data</string>
 </resources>
