Implementada opción de cerrar sesión al clickar el botón atrás en MatchesMainActivity.java

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -25,4 +25,7 @@
     <string name="sorting_array_time">Hora</string>
     <string name="sorting_array_sport">Deporte</string>
     <string name="sorting_array_availability">Plazas disponibles</string>
+    <string name="sign_off_question">¿Cerrar sesión?</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
 </resources>
