--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -28,4 +28,5 @@
     <string name="sign_off_question">¿Cerrar sesión?</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
+    <string name="create_match_too_much_players">Demasiados jugadores</string>
 </resources>
